--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,15 @@ html, body {
 
 webview {
   width: 100%;
-  height: 99%;
+  height: 100%;
 /*  height: 99.5%;*/
+}
+
+.fourup {
+  display: flex;
+  flex-wrap: wrap;
+}
+.fourup webview {
+  width: 50%;
+  height: 50%;
 }
